stDemoOne/force-app/main/default/objects/xDO_MDC_customListHeaders__c/xDO_MDC_customListHeaders__c.object-meta.xml
<CustomObject>
    <label>List Column Header</label>
    <nameField>
        <label>Related List Headers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Column Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>