stDemoOne/force-app/main/default/objects/xDO_MDC_customListHeaders__c/fields/Column_3_Header__c.field-meta.xml
<CustomField>
    <fullName>Column_3_Header__c</fullName>
    <label>Column 3 Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>