stDemoOne/force-app/main/default/objects/xDO_MDC_customListHeaders__c/fields/List_Icon__c.field-meta.xml
<CustomField>
    <fullName>List_Icon__c</fullName>
    <label>List Icon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>standard:account_info</fullName>
            </value>
            <value>
                <fullName>standard:account</fullName>
            </value>
            <value>
                <fullName>standard:action_list_component</fullName>
            </value>
            <value>
                <fullName>standard:actions_and_buttons</fullName>
            </value>
            <value>
                <fullName>standard:activation_target</fullName>
            </value>
            <value>
                <fullName>standard:activations</fullName>
            </value>
            <value>
                <fullName>standard:address</fullName>
            </value>
            <value>
                <fullName>standard:agent_home</fullName>
            </value>
            <value>
                <fullName>standard:agent_session</fullName>
            </value>
            <value>
                <fullName>standard:aggregation_policy</fullName>
            </value>
            <value>
                <fullName>standard:ai_accelerator_card</fullName>
            </value>
            <value>
                <fullName>standard:all</fullName>
            </value>
            <value>
                <fullName>standard:announcement</fullName>
            </value>
            <value>
                <fullName>standard:answer_best</fullName>
            </value>
            <value>
                <fullName>standard:answer_private</fullName>
            </value>
            <value>
                <fullName>standard:answer_public</fullName>
            </value>
            <value>
                <fullName>standard:apex_plugin</fullName>
            </value>
            <value>
                <fullName>standard:apex</fullName>
            </value>
            <value>
                <fullName>standard:app</fullName>
            </value>
            <value>
                <fullName>standard:approval</fullName>
            </value>
            <value>
                <fullName>standard:apps_admin</fullName>
            </value>
            <value>
                <fullName>standard:apps</fullName>
            </value>
            <value>
                <fullName>standard:article</fullName>
            </value>
            <value>
                <fullName>standard:asset_action_source</fullName>
            </value>
            <value>
                <fullName>standard:asset_action</fullName>
            </value>
            <value>
                <fullName>standard:asset_audit</fullName>
            </value>
            <value>
                <fullName>standard:asset_downtime_period</fullName>
            </value>
            <value>
                <fullName>standard:asset_hierarchy</fullName>
            </value>
            <value>
                <fullName>standard:asset_object</fullName>
            </value>
            <value>
                <fullName>standard:asset_relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>