stDemoOne/force-app/main/default/objects/xDO_MDC_customListHeaders__c/fields/List_Subheader__c.field-meta.xml
<CustomField>
    <fullName>List_Subheader__c</fullName>
    <label>List Subheader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>