stDemoOne/force-app/main/default/objects/xDO_MDC_customListHeaders__c/fields/Title_Icon__c.field-meta.xml
<CustomField>
    <fullName>Title_Icon__c</fullName>
    <label>Title Icon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>account</fullName>
            </value>
            <value>
                <fullName>account_info</fullName>
            </value>
            <value>
                <fullName>action_list_component</fullName>
            </value>
            <value>
                <fullName>actions_and_buttons</fullName>
            </value>
            <value>
                <fullName>activation_target</fullName>
            </value>
            <value>
                <fullName>activations</fullName>
            </value>
            <value>
                <fullName>address</fullName>
            </value>
            <value>
                <fullName>agent_home</fullName>
            </value>
            <value>
                <fullName>agent_session</fullName>
            </value>
            <value>
                <fullName>aggregation_policy</fullName>
            </value>
            <value>
                <fullName>ai_accelerator_card</fullName>
            </value>
            <value>
                <fullName>all</fullName>
            </value>
            <value>
                <fullName>announcement</fullName>
            </value>
            <value>
                <fullName>answer_best</fullName>
            </value>
            <value>
                <fullName>answer_private</fullName>
            </value>
            <value>
                <fullName>answer_public</fullName>
            </value>
            <value>
                <fullName>apex</fullName>
            </value>
            <value>
                <fullName>apex_plugin</fullName>
            </value>
            <value>
                <fullName>app</fullName>
            </value>
            <value>
                <fullName>approval</fullName>
            </value>
            <value>
                <fullName>apps</fullName>
            </value>
            <value>
                <fullName>apps_admin</fullName>
            </value>
            <value>
                <fullName>article</fullName>
            </value>
            <value>
                <fullName>asset_action</fullName>
            </value>
            <value>
                <fullName>asset_action_source</fullName>
            </value>
            <value>
                <fullName>asset_audit</fullName>
            </value>
            <value>
                <fullName>asset_downtime_period</fullName>
            </value>
            <value>
                <fullName>asset_hierarchy</fullName>
            </value>
            <value>
                <fullName>asset_object</fullName>
            </value>
            <value>
                <fullName>asset_relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>